<resources>
    <string name="app_name">Healthcare</string>
    <string name="enter_username">Enter Username</string>
    <string name="enter_password">Enter Password</string>
    <string name="forgot_password">Forgot password ?</string>
    <string name="login">LOGIN</string>
    <string name="or_login_with">Or Login with</string>
    <string name="don_t_have_account_sign_up">Don\'t have account? Sign up</string>
    <string name="home">Home</string>
    <string name="medications">Medications</string>
    <string name="logout">Logout</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="open_nav">Open Navigation</string>
    <string name="close_nav">Close Navigation</string>
    <string name="add_devices">Add devices</string>
    <string name="img">img\n</string>
    <string name="device_name">Device Reading</string>
    <string name="connected">Connected</string>
    <string name="frequency">Frequency : </string>
    <string name="quantity">Quantity :</string>
    <string name="enter_medicine_name">Enter Medicine Name</string>
    <string name="enter_quantity">Enter Quantity</string>
    <string name="end_date_time"><![CDATA[End Date & Time]]></string>
    <string name="enter_notes">Enter Notes</string>
    <string name="enter_frequency">Enter Frequency</string>
    <string name="submit">Submit</string>
    <string name="add_medicines">Add Medication</string>
    <string name="ecg_meter">ECG Meter</string>
    <string name="weight_scale">Weight Scale</string>
    <string name="blood_pressure">Blood Pressure</string>
    <string name="blood_glucometer">Blood Glucometer</string>
    <string name="back">Back</string>
    <string name="edit">Edit</string>
    <string name="humhealth">HumHealth</string>
    <string name="turn_on_bluetooth">Turn on Bluetooth</string>
    <string name="username">Username</string>
    <string name="username_unique_id">Username unique ID</string>
    <string name="userimage">UserImage</string>
    <string name="recorded_date_and_time">Recorded Date and Time</string>
    <string name="medicine_details">Medicine Details</string>
    <string name="notes">Notes :</string>
    <string name="remainder">Remainder</string>
    <string name="set_remainder">Set Remainder</string>
    <string name="stop_alarm">Stop Alarm</string>
    <string name="set_alarm">Set Alarm</string>
    <string name="please_select_time">PLease Select time</string>
    <string name="daily_remainder">Daily remainder</string>
    <string name="you_must_select_all_of_the_below_alarm_slots">You Must Select all of the below alarm Slots</string>
    <string name="other_available_devices">Other Available Devices</string>
    <string name="clear_all_remainders">Clear All Remainders</string>
</resources>